--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e36545485d46acf2811c8b1a9aaf5a4c0cbc5692ff06e1a24f40fbaf14d2d3e8"
+  "signature": "sha256:2aad4ced61a833b81d618b1a72bf9e9029fff5c945b0d05305dbecb30531713b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -461,6 +461,7 @@
      "collapsed": false,
      "input": [
       "def SNR_W(RVCorrMethod = 'PM', thisStarName = 'Giant01', sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "#plots SNR and W vs value\n",
       "\n",
       "    data=np.load('npy/data.npy')\n",
       "    SNRs=np.load('npy/SNRs.npy')\n",
@@ -501,7 +502,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
