--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e135f2c9c30f47bc5db17e482a95a8c96213c3734df9171936b4957eb5095b6d"
+  "signature": "sha256:53e2621419b2404a30cb7f69d84f4d852e3bb49a18db0a50d0ae92bf26ba4c6a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -345,6 +345,37 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import pickle\n",
+      "import toolbox"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd /Users/Carlos/Documents/HERMES/reductions/6.5/HD285507_1arc/obj"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/6.5/HD285507_1arc/obj\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "filename = 'Giant01.obj'\n",
       "# filename = 'red_Giant01.obj'\n",
       "filehandler = open(filename, 'r')\n",
@@ -353,7 +384,47 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "toolbox.dec2sex(thisStar.RA/15)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "(4.0, 7.0, 1.1999999999999744)"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "toolbox.dec2sex(thisStar.Dec)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "(15.0, 20.0, 6.1999999999947875)"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
