--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2aad4ced61a833b81d618b1a72bf9e9029fff5c945b0d05305dbecb30531713b"
+  "signature": "sha256:08410aa818266055d53728d100edc9c397507646d2dbf94b77c0679abd5bcf03"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -309,10 +309,10 @@
       "            \n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam]*1000, fmt='.', label = labels[cam], color = colors[cam])\n",
       "            if booBaryCorrect==True: \n",
-      "                plt.scatter(X, Y[i,:,cam]- baryVels, label = labels[cam], color = c, s=s, marker=m)\n",
+      "                plt.scatter(X, Y[i,:,cam]- baryVels, color = c, s=s, marker=m)\n",
       "\n",
       "            else:\n",
-      "                plt.scatter(X, Y[i,:,cam], label = labels[cam], color = c, s=s, marker=m)\n",
+      "                plt.scatter(X, Y[i,:,cam], color = c, s=s, marker=m)\n",
       "\n",
       "            \n",
       "#             plt.plot(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
@@ -350,7 +350,7 @@
       "#         ax2.set_xlabel('Epoch')\n",
       "        \n",
       "\n",
-      "    #     plt.legend(loc=0)\n",
+      "        plt.legend(loc=0)\n",
       "        if booSave==True: \n",
       "            try:\n",
       "                plotName = 'plots/All_RVs_'+labels[cam]+''\n",
@@ -509,100 +509,132 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def RVCorr_RV(RVCorrMethod = 'PM', thisStarName = 'Giant01', sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "def RVCorr_RV(thisStarName = 'Giant01', RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
       "    \n",
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
       "    sigmas=np.load('npy/sigmas.npy')\n",
       "    baryVels=np.load('npy/baryVels.npy')\n",
-      "    JDs=np.load('npy/JDs.npy')\n",
-      "    if RVCorrMethod=='PM':\n",
-      "        RVCorr=np.load('npy/RVCorr_PM.npy')\n",
-      "    else:\n",
-      "        RVCorr=np.load('npy/RVCorr_DM.npy')\n",
+      "    JDs=np.load('npy/JDs.npy')    \n",
+      "    RVCorr_PM=np.load('npy/RVCorr_PM.npy')\n",
+      "    RVCorr_DM=np.load('npy/RVCorr_DM.npy')\n",
+      "    cRVs_PMDM=np.load('npy/cRVs_PMDM.npy')\n",
       "\n",
-      "    i = np.where(data[:,0]==thisStarName)[0][0]\n",
-      "#     X = range(data[:,0].shape[0])\n",
-      "#     Y = RVs\n",
-      "#     Y[Y==0.]=np.nan\n",
-      "    \n",
-      "#     if RVClip>-1:Y[np.abs(Y)>RVClip] = np.nan\n",
-      "#     if sigmaClip>-1:\n",
-      "#         stdY= np.std(Y)\n",
-      "#         medY = np.median(Y)\n",
-      "#         Y[(Y>=medY-sigmaClip*stdY) & (Y<=medY+sigmaClip*stdY)] = np.nan\n",
-      "    \n",
-      "    \n",
-      "    \n",
+      "    idx = np.where(data[:,0]==thisStarName)[0][0]\n",
+      "   \n",
       "    colors = ['b','g','r','cyan']\n",
       "    labels = ['Blue','Green','Red','IR']\n",
+      "    methods = ['PM', 'DM', 'PMDM']\n",
       "    \n",
-      "#     #Plots RVs, baryvels. all star, 4 cameras\n",
-      "#     print 'About to plot RVs from ',RVs.shape[0],'stars.'\n",
+      "    for i,RVCorr in enumerate([RVCorr_PM, RVCorr_DM,'']):\n",
+      "        for cam in range(4)[:]:\n",
+      "#             print data[idx]\n",
+      "#             print 'RV:',RVs[idx,:,cam]\n",
+      "#             print 'RVCorr:',RVCorr[idx,:,cam]\n",
+      "#             print 'JDs:',JDs\n",
+      "            RVs[np.abs(RVs)>RVClip] = np.nan\n",
+      "\n",
+      "            plt.plot(JDs,RVs[idx,:,cam], label = 'RV', marker='.', c='b')\n",
+      "            if booBaryPlot==True: plt.plot(JDs, baryVels, label = 'Barycentric Vel. ', marker='.', c='cyan')\n",
+      "        \n",
+      "            if i==0:\n",
+      "                plt.plot(JDs,RVCorr[idx,:,cam], label = 'Correction', marker='.', c='r')\n",
+      "                plt.plot(JDs,RVs[idx,:,cam]-RVCorr[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "            elif i==1:\n",
+      "                plt.plot(JDs,RVCorr[idx,:,cam], label = 'Correction', marker='.', c='r')\n",
+      "                plt.plot(JDs,RVs[idx,:,cam]-RVCorr[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "            elif i==2:\n",
+      "                plt.plot(JDs,cRVs_PMDM[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "\n",
+      "            plt.legend(loc=0)\n",
+      "            plt.title('RVCorr_'+methods[i]+' for '+data[idx,0]+' - '+labels[cam]+' camera')\n",
+      "\n",
+      "            if booSave==True: \n",
+      "                try:\n",
+      "                    plotName = 'plots/RVCorr_'+methods[i]+'_'+labels[cam]\n",
+      "                    print 'Attempting to save', plotName\n",
+      "                    plt.savefig(plotName)\n",
+      "\n",
+      "                except:\n",
+      "                    print 'FAILED'\n",
+      "            if booShow==True: plt.show()\n",
+      "            plt.close()        \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def RVCorr_Slit(thisStarName = 'Giant01', RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "    import RVTools as RVT\n",
       "    \n",
-      "    for cam in range(4)[:]:\n",
-      "        print data[i]\n",
-      "        print 'RV:',RVs[i,:,cam]\n",
-      "        print 'RVCorr:',RVCorr[i,:,cam]\n",
-      "        print 'JDs:',JDs\n",
-      "        RVs[np.abs(RVs)>RVClip] = np.nan\n",
-      "        plt.plot(JDs,RVs[i,:,cam], label = 'RV', marker='.')\n",
-      "        plt.plot(JDs,RVCorr[i,:,cam], label = 'Correction', marker='.')\n",
-      "        plt.plot(JDs,RVs[i,:,cam]-RVCorr[i,:,cam], label = 'Result', marker='.')\n",
+      "    data=np.load('npy/data.npy')\n",
+      "    RVs=np.load('npy/RVs.npy')\n",
+      "    sigmas=np.load('npy/sigmas.npy')\n",
+      "    baryVels=np.load('npy/baryVels.npy')\n",
+      "    JDs=np.load('npy/JDs.npy')    \n",
+      "    RVCorr_PM=np.load('npy/RVCorr_PM.npy')\n",
+      "    RVCorr_DM=np.load('npy/RVCorr_DM.npy')\n",
+      "    allW_PM=np.load('npy/allW_PM.npy')\n",
+      "    allW_DM=np.load('npy/allW_DM.npy')\n",
+      "    cRVs_PMDM=np.load('npy/cRVs_PMDM.npy')\n",
       "\n",
-      "        if booBaryPlot==True: plt.plot(JDs, baryVels, label = 'Barycentric Vel. ', marker='.')\n",
+      "    #load function that translates pivot# to y-pixel  p2y(pivot)=y-pixel of pivot\n",
+      "    p2y = RVT.pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/6.2/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
       "\n",
-      "        plt.legend(loc=0)\n",
-      "\n",
-      "\n",
-      "\n",
-      "#         ax.set_xticklabels(data[:,0])\n",
-      "#         ax.set_xticks(X)\n",
-      "#         plt.xticks(rotation=70)\n",
-      "\n",
-      "\n",
-      "        if title=='':\n",
-      "            plt.title('RVCorr and RV for '+data[i,0]+' - '+labels[cam]+' camera')\n",
-      "        else:\n",
-      "            plt.title(title)\n",
-      "\n",
-      "#         Y[:,:,cam] = Y[:,:,cam][order[:,cam]]\n",
-      "#         YERR[:,:,cam] = YERR[:,:,cam][order[:,cam]]\n",
-      "        \n",
-      "#         #median\n",
-      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1), label = labels[cam], color = 'k')\n",
-      "        \n",
-      "#         #sigma\n",
-      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1)+stats.nanstd(Y[:,:,cam], axis = 1), label = labels[cam], color = 'r')\n",
-      "#         plt.scatter(X, stats.nanmedian(Y[:,:,cam], axis = 1)-stats.nanstd(Y[:,:,cam], axis = 1), label = labels[cam], color = 'r')\n",
+      "    #gets the y position of for the data array\n",
+      "    datay = p2y[data[:,2].astype(float).astype(int)]\n",
+      "    \n",
+      "    idx = np.where(data[:,0]==thisStarName)[0][0]\n",
+      "   \n",
+      "    colors = ['b','g','r','cyan']\n",
+      "    labels = ['Blue','Green','Red','IR']\n",
+      "    methods = ['PM', 'DM', 'PMDM']\n",
+      "    i=0\n",
+      "#     for i,RVCorr in enumerate([RVCorr_PM, RVCorr_DM,'']):\n",
+      "    \n",
+      "    for cam in range(4)[:1]:\n",
+      "#         RVs[np.abs(RVs)>RVClip] = np.nan\n",
+      "        plt.scatter(allW_PM[:,cam,idx],datay, s=2, c='k')\n",
+      "        plt.plot([0,0],[np.min(datay),np.max(datay)])\n",
+      "        plt.plot([0,0],[np.min(datay),np.max(datay)])\n",
+      "        plt.xlim(-np.max(allW_PM[:,cam,idx]),np.max(allW_PM[:,cam,idx]))\n",
+      "        plt.plot(plt.xlim(),[datay[idx],datay[idx]])\n",
       "        \n",
       "        \n",
-      "#         #min max\n",
-      "#         for star in range(Y.shape[0]):\n",
-      "#             x = np.nanmax(Y[star,:,cam])\n",
-      "#             n = np.nanmin(Y[star,:,cam])\n",
-      "#             plt.plot([star,star],[x,n], color = 'g', lw=2)\n",
-      "#             print star, n, x\n",
-      "        \n",
-      "#         plt.xlabel('MJD')\n",
-      "#         plt.ylabel('RV [m/s]')\n",
+      "#         plt.plot(JDs,RVs[idx,:,cam], label = 'RV', marker='.', c='b')\n",
+      "#         if booBaryPlot==True: plt.plot(JDs, baryVels, label = 'Barycentric Vel. ', marker='.', c='cyan')\n",
       "\n",
+      "#         if i==0:\n",
+      "#             plt.plot(JDs,RVCorr[idx,:,cam], label = 'Correction', marker='.', c='r')\n",
+      "#             plt.plot(JDs,RVs[idx,:,cam]-RVCorr[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "#         elif i==1:\n",
+      "#             plt.plot(JDs,RVCorr[idx,:,cam], label = 'Correction', marker='.', c='r')\n",
+      "#             plt.plot(JDs,RVs[idx,:,cam]-RVCorr[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "#         elif i==2:\n",
+      "#             plt.plot(JDs,cRVs_PMDM[idx,:,cam], label = 'Result', marker='.', c='g')\n",
+      "\n",
+      "#         plt.legend(loc=0)\n",
+      "        plt.title('RVCorr_'+methods[i]+' for '+data[idx,0]+' - '+labels[cam]+' camera')\n",
       "\n",
       "        if booSave==True: \n",
       "            try:\n",
-      "                plotName = 'plots/RVCorr_RV_'+labels[cam]\n",
+      "                plotName = 'plots/RVCorr_'+methods[i]+'_'+labels[cam]\n",
       "                print 'Attempting to save', plotName\n",
       "                plt.savefig(plotName)\n",
       "\n",
       "            except:\n",
       "                print 'FAILED'\n",
       "        if booShow==True: plt.show()\n",
-      "        plt.close()        \n",
-      "        "
+      "        plt.close()        \n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
