--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e6981a96ac3999a6c15922cd41763fc1874a239eb92e08a9b1859eb93fbc780e"
+  "signature": "sha256:d19a6833ebca64e414a4f4ddcd027ab8e5fe7e9d3aad7fa7d6ddedeebbf1a47b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -172,15 +172,11 @@
      "collapsed": false,
      "input": [
       "#Create cross correlation curves wrt epoch 0\n",
-      "def RVs_CC_t0(thisStar, xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10, medianRange = 0):\n",
-      "\n",
-      "    print '#############################################################################################################'\n",
-      "    print '#############################################################################################################'\n",
-      "    print '#############################################################################################################'\n",
+      "def RVs_CC_t0(thisStar, starIdx,  xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10, medianRange = 0):\n",
       "\n",
       "#     validDates = np.all([np.nansum(thisCam.red_fluxes,1).astype(bool) for thisCam in thisStar.exposures.cameras],0)\n",
-      "    \n",
-      "    for j,thisCam in enumerate(thisStar.exposures.cameras):\n",
+      "    print ''\n",
+      "    for cam,thisCam in enumerate(thisStar.exposures.cameras):\n",
       "        RVs = []\n",
       "        sigmas = [] \n",
       "        Qs = []\n",
@@ -188,7 +184,7 @@
       "\n",
       "        validDates = np.nansum(thisCam.red_fluxes,1).astype(bool)\n",
       "        \n",
-      "        print 'Camera',j,validDates\n",
+      "        print 'Camera',cam\n",
       "        \n",
       "        if len(np.arange(len(validDates))[validDates])>0:\n",
       "            CCReferenceSet = np.arange(len(validDates))[validDates][0]\n",
@@ -197,18 +193,15 @@
       "            \n",
       "            \n",
       "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam, medianRange=medianRange)\n",
-      "        print 'Reference wl,fl sum', np.nansum(lambda1), np.nansum(flux1)\n",
-      "        print \n",
       "        \n",
       "        plts = 0    \n",
-      "        for i, JD in enumerate(thisStar.exposures.JDs):\n",
-      "            print 'Set,MJD',i,JD\n",
-      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[i], thisCam.red_fluxes[i], thisCam, medianRange=medianRange)\n",
-      "            print 'This wl,fl sum', np.nansum(lambda2), np.nansum(flux2)\n",
+      "        for epoch, JD in enumerate(thisStar.exposures.JDs):\n",
+      "            print epoch,\n",
+      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch], thisCam, medianRange=medianRange)\n",
       "\n",
-      "            if validDates[i]==True:\n",
+      "            if validDates[epoch]==True:\n",
       "#                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
-      "#                 if i <5:\n",
+      "#                 if epoch <5:\n",
       "#                     plt.plot(flux1)\n",
       "#                     plt.plot(flux2)\n",
       "#                     plt.plot(CCCurve)\n",
@@ -224,7 +217,6 @@
       "        #                 try:\n",
       "        #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
       "                        p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
-      "                        print 'p result',p\n",
       "                        if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
       "                            pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
       "                        else:\n",
@@ -232,32 +224,27 @@
       "        #                 except:\n",
       "        #                     pixelShift = 0\n",
       "\n",
-      "                        thisQ, thisdRV = QdRV(thisCam.wavelengths[i], thisCam.red_fluxes[i])\n",
-      "                        print  ' thisQ, thisdRV',thisQ, thisdRV\n",
+      "                        thisQ, thisdRV = QdRV(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch])\n",
       "\n",
       "                        mid_px = thisCam.wavelengths.shape[1]/2\n",
-      "                        dWl = (thisCam.wavelengths[i,mid_px+1]-thisCam.wavelengths[i,mid_px]) / thisCam.wavelengths[i,mid_px]\n",
+      "                        dWl = (thisCam.wavelengths[epoch,mid_px+1]-thisCam.wavelengths[epoch,mid_px]) / thisCam.wavelengths[epoch,mid_px]\n",
       "                        RV = dWl * pixelShift * constants.c \n",
       "                        print 'RV',RV\n",
       "\n",
-      "                        SNR = np.sqrt(stats.nanmedian(thisCam.red_fluxes[i]))\n",
       "                    else:\n",
       "                        R = 0\n",
       "                        thisQ = 0\n",
       "                        thisdRV = 0\n",
       "                        RV = 0\n",
-      "                        SNR = 0\n",
       "                        print 'Invalid data point'\n",
       "\n",
       "                except Exception,e: \n",
-      "                    print \n",
+      "                    print 'CC Error'\n",
       "                    print str(e)\n",
-      "                    print 'cc',CCCurve,\n",
       "                    R = 0\n",
       "                    thisQ = 0\n",
       "                    thisdRV = 0\n",
       "                    RV = 0\n",
-      "                    SNR = 0\n",
       "#                     if plts<5:\n",
       "#                         plts+=1\n",
       "#                         plt.plot(flux1)\n",
@@ -270,13 +257,22 @@
       "#                 if i==CCReferenceSet:\n",
       "#                     print 'The CC reference set is not present. Can\\'t continue. Launch again with different reference set.'\n",
       "#                     sys.exit()\n",
-      "                SNR = 0\n",
       "                thisQ = 0\n",
       "                thisdRV = 0\n",
       "                RV = 0\n",
       "                print 'Invalid data point'\n",
       "\n",
-      "            print ''\n",
+      "            SNR = np.sqrt(stats.nanmedian(thisCam.red_fluxes[epoch]))\n",
+      "            \n",
+      "            if np.isnan(SNR)==True: \n",
+      "                msg = 'NaN in SNR calculation sqrt(median(flux)).'\n",
+      "                msg += str(np.sum(np.isnan(thisCam.red_fluxes[epoch])))\n",
+      "                msg += '/'+str(thisCam.red_fluxes[epoch].shape[0])+' NaNs in flux.'\n",
+      "                msg += ' Median_flux='+str(stats.nanmedian(thisCam.red_fluxes[epoch]))\n",
+      "                print msg\n",
+      "                comment(starIdx,epoch,cam,msg )\n",
+      "                print 'SNR NaN',\n",
+      "            print SNR\n",
       "\n",
       "            SNRs.append(SNR)\n",
       "            Qs.append(thisQ)\n",
@@ -294,6 +290,32 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def comment(star, epoch, cam, comment):\n",
+      "    comments = []\n",
+      "    try:\n",
+      "        comments = np.load('npy/comments.npy')\n",
+      "    except:\n",
+      "        pass\n",
+      "    \n",
+      "    if comments==[]:\n",
+      "        comments = np.zeros((1,),dtype=('i4,i4,i4,a100'))\n",
+      "        comments[:] = [(star, epoch, cam, comment)]\n",
+      "    else:\n",
+      "        x = np.zeros((1,),dtype=('i4,i4,i4,a100'))\n",
+      "        x[:] = [(star, epoch, cam, comment)]\n",
+      "        comments = np.append(comments,x)\n",
+      "    \n",
+      "    np.save('npy/comments.npy',comments)\n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -494,31 +516,33 @@
      "input": [
       "\n",
       "def calibrator_weights(deltay, sigma):\n",
-      "\t\"\"\"For calibrator stars with CCD y values deltay from the target star\n",
-      "\tand radial velocity errors sigma, create an optimal set of weights.\n",
-      "\t\n",
-      "\tWe want to minimise the variance of the weighted sum of calibrator\n",
-      "\tradial velocities where we have the following constraints:\n",
-      "\t\n",
-      "\t1) \\Sigma w_i = 1  (i.e. the average value of the calibrators measure CCD shifts)\n",
-      "\t2) \\Sigma w_i dy_i = 0 (i.e. allow the wavelength solution to rotate about the target)\n",
-      "\t\n",
-      "\tSee http://en.wikipedia.org/wiki/Quadratic_programming\n",
-      "\t\"\"\"\n",
-      "\tN = len(sigma)\n",
-      "\t#Start of with a matrix of zeros then fill it with the \"Q\" and \"E\" matrices\n",
-      "\tM = np.zeros((N+2,N+2))\n",
-      "\tM[(range(N),range(N))] = sigma\n",
-      "\tM[N,0:N] = deltay\n",
-      "\tM[0:N,N] = deltay\n",
-      "\tM[N+1,0:N] = np.ones(N)\n",
-      "\tM[0:N,N+1] = np.ones(N)\n",
-      "\tb = np.zeros(N+2)\n",
-      "\tb[N+1] = 1.0\n",
-      "\t#Solve the problem M * x = b\n",
-      "\tx = np.linalg.solve(M,b)\n",
-      "\t#The first N elements of x contain the weights.\n",
-      "\treturn x[0:N]"
+      "    \"\"\"For calibrator stars with CCD y values deltay from the target star\n",
+      "    and radial velocity errors sigma, create an optimal set of weights.\n",
+      "\n",
+      "    We want to minimise the variance of the weighted sum of calibrator\n",
+      "    radial velocities where we have the following constraints:\n",
+      "\n",
+      "    1) \\Sigma w_i = 1  (i.e. the average value of the calibrators measure CCD shifts)\n",
+      "    2) \\Sigma w_i dy_i = 0 (i.e. allow the wavelength solution to rotate about the target)\n",
+      "\n",
+      "    See http://en.wikipedia.org/wiki/Quadratic_programming\n",
+      "    \"\"\"\n",
+      "    N = len(sigma)\n",
+      "    #Start of with a matrix of zeros then fill it with the \"Q\" and \"E\" matrices\n",
+      "    M = np.zeros((N+2,N+2))\n",
+      "    M[(range(N),range(N))] = sigma\n",
+      "#     idx = np.where(deltay==0)[0][0]\n",
+      "#     M[idx,idx] = 1e17\n",
+      "    M[N,0:N] = deltay\n",
+      "    M[0:N,N] = deltay\n",
+      "    M[N+1,0:N] = np.ones(N)\n",
+      "    M[0:N,N+1] = np.ones(N)\n",
+      "    b = np.zeros(N+2)\n",
+      "    b[N+1] = 1.0\n",
+      "    #Solve the problem M * x = b\n",
+      "    x = np.linalg.solve(M,b)\n",
+      "    #The first N elements of x contain the weights.\n",
+      "    return x[0:N]"
      ],
      "language": "python",
      "metadata": {},
@@ -531,32 +555,50 @@
      "input": [
       "def calibrator_weights2(deltay,SNR):\n",
       "\n",
-      "    c = SNR/np.abs(deltay)\n",
+      "    c = 1/np.abs(deltay)/SNR\n",
       "    c[deltay==0]=0\n",
       "    c /=np.sum(c)\n",
       "    return c\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def create_allW(data = [], SNRs = [], starSet=[], RVCorrMethod = 'PM'):\n",
+      "def calibrator_weights3(deltay,SNR):\n",
+      "#nope\n",
+      "    c = (SNR+np.abs(deltay))/np.abs(deltay)\n",
+      "    c[deltay==0]=0\n",
+      "    c /=np.sum(c)\n",
+      "    return c\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def create_allW(data = [], SNRs = [], starSet=[], RVCorrMethod = 'PM', refEpoch = 0):\n",
       "\n",
       "    if ((data!=[]) and (SNRs!=[])):\n",
-      "#         if ((starSet!=[]) and (len(starSet.shape)==1) and (starSet[0]>0)):\n",
-      "#             data = data[starSet]\n",
-      "#             SNRs = SNRs[starSet]\n",
+      "        if ((starSet!=[]) and (len(starSet.shape)==1) and (starSet[0]>0)):\n",
+      "            data = data[starSet]\n",
+      "            SNRs = SNRs[starSet]\n",
       "\n",
       "        #load function that translates pivot# to y-pixel  p2y(pivot)=y-pixel of pivot\n",
       "        p2y = pivot_to_y('/Users/Carlos/Documents/HERMES/reductions/6.2/rhoTuc_6.2/0_20aug/1/20aug10042tlm.fits') \n",
       "\n",
       "        #gets the y position of for the data array\n",
       "        datay = p2y[data[:,2].astype(float).astype(int)]\n",
-      "\n",
+      "        order = np.argsort(datay)\n",
+      "        \n",
       "        #Creates empty array for relative weights\n",
       "        #allW[Weights, camera, staridx of the star to be corrected]\n",
       "        allW = np.zeros((data.shape[0],4,data.shape[0]))\n",
@@ -568,18 +610,24 @@
       "\n",
       "            for cam in range(4):\n",
       "\n",
-      "                thisSNRs = SNRs[:,0,cam].copy()\n",
-      "                thisSNRs[np.isnan(thisSNRs)]=1  #sets NaNs into SNR=1 \n",
+      "                thisSigma = 1./SNRs[:,refEpoch,cam].copy()\n",
+      "                thisSigma[np.isnan(thisSigma)]=1e+17  #sets NaNs into SNR=1e-17\n",
       "                \n",
-      "#                 print deltay,thisSNRs\n",
-      "                if np.sum(thisSNRs)>0:\n",
+      "                if np.sum(thisSigma)>0:\n",
       "                    if RVCorrMethod == 'PM':\n",
-      "                        W = calibrator_weights(deltay,thisSNRs)\n",
-      "                    else:\n",
-      "                        W = calibrator_weights2(deltay,thisSNRs)\n",
+      "                        W = calibrator_weights(deltay,thisSigma)\n",
+      "                    elif RVCorrMethod == 'DM':\n",
+      "                        W = calibrator_weights2(deltay,thisSigma)\n",
       "                        \n",
+      "#                         print data[thisStarIdx,0],RVCorrMethod\n",
+      "                        if data[thisStarIdx,0]=='Giant01':\n",
+      "                            for a,b,c in zip(thisSigma[order],W[order], thisSigma[order]):\n",
+      "                                print 1./a,b,c\n",
+      "                        print ''\n",
+      "\n",
       "                else:\n",
       "                    W = np.zeros(deltay.shape[0]) #hack to fix an all zeros SNRs for failed reductions\n",
+      "                \n",
       "                allW[:,cam,thisStarIdx] = W\n",
       "                    \n",
       "    else:\n",
@@ -597,7 +645,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def create_RVCorr(RVs, allW, RVClip = 1e17,starSet=[]):\n",
+      "def create_RVCorr_PM(RVs, allW, RVClip = 1e17,starSet=[]):\n",
+      "    RVCorr = np.zeros(RVs.shape)\n",
+      "    print 'Clipping to',RVClip\n",
+      "    RVs[np.abs(RVs)>RVClip]=0\n",
+      "    \n",
+      "    for thisStarIdx in range(RVs.shape[0]):\n",
+      "        for epoch in range(RVs.shape[1]):\n",
+      "            thisRVCorr = (allW[:,:,thisStarIdx]+1)*RVs[:,epoch,:]\n",
+      "            RVCorr[:,epoch,:] = thisRVCorr + RVs[:,epoch,:] \n",
+      "\n",
+      "    return RVCorr"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def create_RVCorr_DM(RVs, allW, RVClip = 1e17,starSet=[]):\n",
       "    RVCorr = np.zeros(RVs.shape)\n",
       "    print 'Clipping to',RVClip\n",
       "    RVs[np.abs(RVs)>RVClip]=0\n",
@@ -607,9 +675,7 @@
       "            for cam in range(RVs.shape[2]):\n",
       "                thisRVCorr = np.nansum(allW[:,cam,thisStarIdx]*RVs[:,epoch,cam])\n",
       "                RVCorr[thisStarIdx,epoch,cam] = thisRVCorr\n",
-      "                print thisRVCorr,\n",
-      "            print \n",
-      "        print \n",
+      "\n",
       "    return RVCorr"
      ],
      "language": "python",
